tests/fixtures/errors/assign_to_const.gbl

func main(): int {
    val x = 10
    x = 20
    return 0
}
